<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomActivity3"
    android:background="#000022">

    <ImageView
        android:id="@+id/photo2"
        android:layout_width="86dp"
        android:layout_height="133dp"
        android:src="@drawable/scrt_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />


    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/r_glez_vos_achats_en_caisse"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo2"
        app:layout_constraintVertical_bias="0.026"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/text_view_id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/approchez_votre_smarphone_de_la_borne_nfc"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo2"
        app:layout_constraintVertical_bias="0.33"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/text_view_id3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/retrouvez_votre_ticket_de_caisse_num_rique"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo4"
        app:layout_constraintVertical_bias="0.152"
        tools:layout_editor_absoluteX="-16dp" />

    <ImageView
        android:id="@+id/photo3"
        android:layout_width="62dp"
        android:layout_height="85dp"
        android:src="@drawable/vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo2"
        app:layout_constraintVertical_bias="0.15" />


    <ImageView
        android:id="@+id/photo4"
        android:layout_width="62dp"
        android:layout_height="85dp"
        android:src="@drawable/vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_id2"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_design"
        android:padding="14dp"
        android:text="@string/commencer"
        android:textAllCaps="false"
        android:onClick="btnstart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_id"
        app:layout_constraintVertical_bias="0.874"
        app:layout_constraintWidth_percent=".8" />


</androidx.constraintlayout.widget.ConstraintLayout>
